tests/fixtures/openfigi.com/expected/src/fern/errors/unauthorized_error.py


import typing

from ..core.api_error import ApiError


class UnauthorizedError(ApiError):
    def __init__(self, body: str, headers: typing.Optional[typing.Dict[str, str]] = None):
        super().__init__(status_code=401, headers=headers, body=body)
